--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/ac-calc.css" type="text/css" />
+    <link rel="stylesheet" href="assets/style.css" type="text/css" />
     <title>Calculator</title>
   </head>
 
@@ -59,6 +59,6 @@
       </div>
     </div>
     <!-- custom javascript -->
-    <script src="assets/ac-calc.js" type="text/javascript"></script>
+    <script src="assets/main.js" type="text/javascript"></script>
   </body>
 </html>
