--- a/index.html
+++ b/index.html
@@ -25,33 +25,32 @@
       <div>
         <button id="allclr">AC</button>
         <button id="clr">CL</button>
-
         <button class="a_op">%</button>
         <button class="a_op">/</button>
       </div>
       <div>
-        <button id="power">^</button>
+<!--         <button id="power">^</button> -->
         <button>7</button>
         <button>8</button>
         <button>9</button>
         <button class="a_op">*</button>
       </div>
       <div>
-        <button>(</button>
+<!--         <button>(</button> -->
         <button>4</button>
         <button>5</button>
         <button>6</button>
         <button class="a_op">-</button>
       </div>
       <div>
-        <button>)</button>
+<!--         <button>)</button> -->
         <button>1</button>
         <button>2</button>
         <button>3</button>
         <button class="a_op">+</button>
       </div>
       <div>
-        <button id="root">&radic;</button>
+<!--         <button id="root">&radic;</button> -->
         <button>00</button>
         <button>0</button>
         <button>.</button>
