--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
         <button class="a_op">*</button>
       </div>
       <div>
+        <button>(</button>
         <button>4</button>
         <button>5</button>
         <button>6</button>
         <button class="a_op">-</button>
       </div>
       <div>
+        <button>)</button>
         <button>1</button>
         <button>2</button>
         <button>3</button>
