--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
       <div>
         <button id="allclr">AC</button>
         <button id="clr">CL</button>
+        <button></button>
         <button class="a_op">%</button>
         <button class="a_op">/</button>
       </div>
       <div>
+        <button></button>
         <button>7</button>
         <button>8</button>
         <button>9</button>
