--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <div>
         <button id="allclr">AC</button>
         <button id="clr">CL</button>
-        <button></button>
+        <button>&#10094;</button>
         <button class="a_op">%</button>
         <button class="a_op">/</button>
       </div>
       <div>
-        <button></button>
+        <button>^</button>
         <button>7</button>
         <button>8</button>
         <button>9</button>
@@ -51,6 +51,7 @@
         <button class="a_op">+</button>
       </div>
       <div>
+        <button>&radic;</button>
         <button>00</button>
         <button>0</button>
         <button>.</button>
